# internal/handlers/userHandlers.go
@@ -3,7 +3,6 @@ package handlers
 import (
 	"awesomeProject1/internal/UserService" // Импортируем наш сервис
 	"awesomeProject1/internal/web/Users"
-	"awesomeProject1/internal/web/tasks"
 	"golang.org/x/net/context"
 )
 
@@ -78,18 +77,18 @@ func (Handler *UserHandler) PatchUsersId(ctx context.Context, request Users.Patc
 	return response, nil
 
 }
-func (h *UserHandler) GetUsersUserId(ctx context.Context, request Users.GetUsersUserIdRequestObject) (Users.GetUsersUserIdResponseObject, error) {
+func (h *UserHandler) GetApiUsersUserIdTasks(ctx context.Context, request Users.GetApiUsersUserIdTasksRequestObject) (Users.GetApiUsersUserIdTasksResponseObject, error) {
 	userID := request.UserId
 	tasksByUserID, err := h.Service.GetTasksForUser(uint(userID))
 	if err != nil {
 		return nil, err
 	}
 
-	var tasks1 []tasks.Task // Создаем новый срез для преобразованных задач
+	var tasks1 []Users.Task // Создаем новый срез для преобразованных задач
 
 	// Преобразуем задачи из tasksByUserID в нужный тип
 	for _, task := range tasksByUserID {
-		newTask := tasks.Task{
+		newTask := Users.Task{
 			// заполняем поля на основе task
 			Id:     &task.ID,
 			IsDone: &task.IsDone,
@@ -101,9 +100,7 @@ func (h *UserHandler) GetUsersUserId(ctx context.Context, request Users.GetUsers
 		tasks1 = append(tasks1, newTask)
 	}
 
-	response := Users.GetUsersUserId200JSONResponse{
-		Tasks: tasks1,
-	}
+	response := Users.GetApiUsersUserIdTasks200JSONResponse(tasks1)
 
 	return response, nil // Возвращаем ответ
 }
